--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -14,6 +14,8 @@
 
         <import type="android.view.View" />
 
+        <import type="com.hyeeyoung.wishboard.model.common.ProcessStatus" />
+
         <import type="androidx.navigation.Navigation" />
     </data>
 
@@ -120,16 +122,29 @@
 
         </LinearLayout>
 
-        <Button
+        <TextView
             android:id="@+id/next"
             style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacingBase"
-            android:onClick="@{() -> viewModel.checkRegisteredUser()}"
             android:enabled="@{viewModel.validEmailFormat == true}"
-            android:text="@string/next"
+            android:onClick="@{() -> viewModel.checkRegisteredUser()}"
+            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.next)}"
             android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="@string/next"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading_lottie"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/next"
+            app:lottie_fileName="lottie/loading_horizontal_black.json"
+            app:lottie_imageAssetsFolder="lottie"
+            app:lottie_loop="true" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
