--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -12,6 +12,8 @@
 
         <import type="android.view.View" />
 
+        <import type="com.hyeeyoung.wishboard.model.common.ProcessStatus" />
+
         <variable
             name="viewModel"
             type="com.hyeeyoung.wishboard.viewmodel.MyViewModel" />
@@ -129,22 +131,30 @@
             app:layout_constraintTop_toTopOf="@id/nickname_detail_text"
             tools:text="(7/12)자" />
 
-        <Button
+        <TextView
             android:id="@+id/complete"
+            style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/spacingBase"
             android:layout_marginTop="@dimen/spacing20"
             android:layout_marginBottom="@dimen/spacingBase"
-            android:background="@drawable/selector_button"
             android:enabled="@{viewModel.isEnabledEditCompleteButton()}"
-            android:fontFamily="@font/suit_b"
-            android:outlineProvider="none"
-            android:paddingVertical="@dimen/spacingBase"
-            android:text="@string/complete"
-            android:textColor="@color/gray_700"
-            android:textSize="@dimen/typographyBase"
+            android:text="@{viewModel.profileEditStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.complete)}"
+            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            tools:text="@string/complete" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading_lottie"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/complete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/complete"
+            app:lottie_fileName="lottie/loading_horizontal_black.json"
+            app:lottie_imageAssetsFolder="lottie"
+            app:lottie_loop="true" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
