[mod] 상품명 및 가격 hint 변경

--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -51,7 +51,7 @@
                 android:background="@null"
                 android:fontFamily="@font/suit_r"
                 android:gravity="center"
-                android:hint="@string/item_name"
+                android:hint="@string/item_name_input_text"
                 android:inputType="text"
                 android:onTextChanged="@{viewModel::onItemNameTextChanged}"
                 android:text="@{viewModel.itemName}"
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:fontFamily="@font/montserrat_b"
-                android:hint="@string/price"
+                android:hint="@string/price_input_text"
                 android:layout_marginTop="@dimen/spacingMicro"
                 android:inputType="number"
                 android:text="@{viewModel.itemPrice}"
