--- a/app/src/main/res/layout/dialog_folder_more.xml
+++ b/app/src/main/res/layout/dialog_folder_more.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/folder_delete"
                 android:textAppearance="@style/Widget.BottomSheetDialog.Option.TextAppearance"
-                android:textColor="@color/red"
+                android:textColor="@color/pink"
                 app:layout_constraintTop_toBottomOf="@id/update" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
