--- a/app/src/main/res/layout/item_wish.xml
+++ b/app/src/main/res/layout/item_wish.xml
@@ -20,7 +20,7 @@
             android:id="@+id/item_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:foreground="@color/ultraSemiTransparent"
+            android:foreground="@color/semiTransparent"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent" />
