[chore] 컬러 name을 snake_case로 변경

--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -22,7 +22,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_transparent_500">
+        android:background="@color/black_transparent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container"
