--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -85,7 +85,7 @@
                         android:id="@+id/item_image"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:foreground="@color/semiTransparent"
+                        android:foreground="@color/semi_transparent"
                         android:background="@drawable/shape_border_radius_32"
                         android:backgroundTint="@color/gray_150"
                         android:scaleType="centerCrop"
