[chore]  navgraph 파일에서 id -> snake_case, label -> camelCase로 변경

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeFragment"
+        android:id="@+id/home_fragment"
         android:icon="@drawable/ic_nav_wish_list"
         android:state_selected="false"
         android:title="@string/navigation_menu_title_wishlist" />
     <!-- TODO id값 snake case로 통일 -->
     <item
-        android:id="@+id/folderFragment"
+        android:id="@+id/folder_fragment"
         android:icon="@drawable/ic_nav_folder"
         android:state_selected="false"
         android:title="@string/navigation_menu_title_folder" />
@@ -17,7 +17,7 @@
         android:state_selected="false"
         android:title="@string/navigation_menu_title_add" />
     <item
-        android:id="@+id/notiFragment"
+        android:id="@+id/noti_fragment"
         android:icon="@drawable/ic_nav_notice"
         android:state_selected="false"
         android:title="@string/navigation_menu_title_notice" />
