--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -3,32 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav_graph"
-    app:startDestination="@id/myFragment">
+    app:startDestination="@id/my_fragment">
 
     <fragment
-        android:id="@+id/myFragment"
+        android:id="@+id/my_fragment"
         android:name="com.hyeeyoung.wishboard.view.my.screens.MyFragment"
-        android:label="fragment_my"
+        android:label="myFragment"
         tools:layout="@layout/fragment_my">
         <action
             android:id="@+id/action_my_to_profile_edit"
-            app:destination="@id/profileEditFragment" />
+            app:destination="@id/profile_edit_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/profileEditFragment"
+        android:id="@+id/profile_edit_fragment"
         android:name="com.hyeeyoung.wishboard.view.my.screens.MyProfileEditFragment"
-        android:label="fragment_profile_edit"
+        android:label="profileEditFragment"
         tools:layout="@layout/fragment_profile_edit">
         <action
             android:id="@+id/action_my_profile_edit_to_gallery_image"
-            app:destination="@id/galleryImageFragment" />
+            app:destination="@id/gallery_image_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/galleryImageFragment"
+        android:id="@+id/gallery_image_fragment"
         android:name="com.hyeeyoung.wishboard.view.common.screens.GalleryImageFragment"
-        android:label="fragment_gallery_image"
+        android:label="galleryImageFragment"
         tools:layout="@layout/fragment_gallery_image" />
 
 </navigation>
