--- a/app/src/main/res/layout/item_noti.xml
+++ b/app/src/main/res/layout/item_noti.xml
@@ -28,6 +28,7 @@
             android:id="@+id/item_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:foreground="@color/ultra_semi_transparent"
             android:background="@drawable/shape_border_radius_40"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
