--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -286,7 +286,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/nanum_square_eb"
+                    android:fontFamily="@font/suit_b"
                     android:text="@string/colon"
                     android:textColor="@color/gray_700"
                     android:textSize="@dimen/typographyBase"
