--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -171,7 +171,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_marginEnd="20dp"
-                        android:fontFamily="@font/nanum_square_r"
+                        android:fontFamily="@font/suit_r"
                         app:timeFormat="@{DateFormatUtilKt.convertStrTimeToDate(viewModel.wishItem.createAt)}"
                         android:textColor="@color/gray_300"
                         android:textSize="@dimen/typographyDescription"
