[feat] push_state에 따라 마이페이지 알림 스위치 on/off ui를 구현

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -157,7 +157,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/spacing5"
-                            android:checked="true"
+                            android:checked="@{viewModel.pushState}"
                             app:switchMinWidth="50dp"
                             app:thumbTint="@color/white"
                             app:trackTint="@color/selector_switch_track" />
