--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <import type="androidx.navigation.Navigation" />
 
         <variable
@@ -50,6 +52,18 @@
             android:layout_height="0.5dp"
             android:background="@color/gray_100"
             app:layout_constraintTop_toTopOf="@id/cart_list" />
+
+        <TextView
+            style="@style/Widget.TextAppearance.NoItemView.Detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cart_no_item_view"
+            android:visibility="@{viewModel.cartList.size() > 0 ? View.GONE : View.VISIBLE}"
+            app:layout_constraintBottom_toTopOf="@id/cart_total_container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/cart_list"
+            tools:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cart_list"
