--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,20 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/nav_graph" />
 
+        <TextView
+            android:id="@+id/networkView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:fontFamily="@font/suit_r"
+            android:paddingHorizontal="@dimen/typographyDescription"
+            android:paddingVertical="@dimen/spacing20"
+            android:text="@string/check_network_connection_detail"
+            android:textColor="@color/white"
+            android:textSize="@dimen/typographyBase"
+            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+            tools:visibility="gone" />
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
             android:layout_width="match_parent"
