--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -198,6 +198,26 @@
         <item name="fontFamily">@font/suit_m</item>
     </style>
 
+    <style name="Widget.Snackbar" parent="">
+        <item name="android:background">@drawable/shape_border_radius_45</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingStart">32dp</item>
+        <item name="android:paddingEnd">32dp</item>
+        <item name="android:paddingTop">24dp</item>
+        <item name="android:paddingBottom">24dp</item>
+        <item name="android:layout_marginStart">24dp</item>
+        <item name="android:layout_marginEnd">24dp</item>
+        <item name="android:layout_marginTop">@dimen/spacingBase</item>
+        <item name="android:layout_marginBottom">@dimen/spacingBase</item>
+    </style>
+
+    <style name="Widget.Snackbar.TextAppearance" parent="">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/typographyBase</item>
+        <item name="android:fontFamily">@font/suit_r</item>
+    </style>
+
     <style name="My.Section.Title" parent="">
         <item name="android:layout_marginTop">32dp</item>
         <item name="android:layout_marginStart">@dimen/spacingBase</item>
