--- a/app/src/main/res/layout/snackbar_item.xml
+++ b/app/src/main/res/layout/snackbar_item.xml
@@ -8,17 +8,10 @@
 
         <TextView
             android:id="@+id/message"
-            android:layout_width="wrap_content"
+            style="@style/Widget.Snackbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginVertical="@dimen/spacingBase"
-            android:background="@drawable/shape_border_radius_45"
-            android:backgroundTint="@color/black"
-            android:fontFamily="@font/suit_r"
-            android:paddingHorizontal="48dp"
-            android:paddingVertical="24dp"
-            android:textColor="@color/white"
-            android:textSize="@dimen/typographyBase"
+            android:textAppearance="@style/Widget.Snackbar.TextAppearance"
             tools:text="@string/wish_item_registration_toast_text" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
